--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
     <title>Trialyx Health - Revolutionizing Clinical Trial Data Management</title>
     
     <!-- Favicon -->
-    <link rel="icon" href="images/logo.png" type="image/png">
+
+    <link rel="icon" href="files/trialyx-health-logo-zip-file/svg/logo-color.svg" type="image/svg+xml">
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Header Section -->
+
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="Trialyx Health Logo">
+                <img src="files/trialyx-health-logo-zip-file/svg/logo-color.svg" alt="Trialyx Health Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="#products">Products</a></li>
