add initial files

--- a/abc/index.html
+++ b/abc/index.html
@@ -23,7 +23,8 @@
             <div class="hidden md:flex items-center space-x-4">
                 <a href="#about" class="text-gray-600 hover:text-gray-800">About</a>
                 <a href="#products" class="text-gray-600 hover:text-gray-800">Products</a>
-                <a href="#contact" class="text-gray-600 hover:text-gray-800">Contact</a>
+                <a href="#features" class="text-gray-600 hover:text-gray-800">Features</a>
+                <a href="#contact" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-full hover:bg-blue-700 transition duration-300">Contact Us</a>
             </div>
         </nav>
     </header>
@@ -50,17 +51,56 @@
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-4">Trialyx Health Document Generator</h3>
-                        <p class="text-gray-600">An advanced, agent-based web application built with Streamlit, designed to revolutionize the creation of clinical trial documentation.</p>
+                        <p class="text-gray-600 mb-4">An advanced, agent-based web application built with Streamlit, designed to revolutionize the creation of clinical trial documentation.</p>
+                        <a href="document-generator.html" class="text-blue-600 font-bold hover:underline">Learn More</a>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">Clinical Trial Management System</h3>
-                        <p class="text-gray-600">A comprehensive platform for end-to-end clinical trial management, including trial planning, participant recruitment, data analysis, and regulatory compliance tools.</p>
+                        <h3 class="text-xl font-semibold mb-4">Clinical Trial Management System <span class="text-sm font-normal text-gray-500">(Coming Soon)</span></h3>
+                        <p class="text-gray-600 mb-4">A comprehensive AI platform for end-to-end clinical trial management, functioning like a Kayak.com for clinical trials. It optimizes, accelerates, and automates trial processes.</p>
+                        <ul class="list-disc list-inside text-gray-600 mb-4">
+                            <li>📅 Trial planning and scheduling</li>
+                            <li>👥 Participant recruitment and management</li>
+                            <li>📊 Data collection and analysis</li>
+                            <li>🔒 Regulatory compliance tools</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="contact" class="py-20 bg-gray-100">
+        <section id="features" class="py-20 bg-gray-100">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-8">Key Features</h2>
+                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">📝 Automated Document Generation</h3>
+                        <p class="text-gray-600">Effortlessly generate a wide range of clinical trial documents using advanced AI models.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">🤖 AI-powered Content Refinement</h3>
+                        <p class="text-gray-600">Continuously refine documents through intelligent agents that check for missing information, timeline inconsistencies, and redundancies.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">🔄 Flexible Document Customization</h3>
+                        <p class="text-gray-600">Customize and design any type of clinical trial document according to specific needs.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">👥 Collaborative Workflow Support</h3>
+                        <p class="text-gray-600">Enable seamless collaboration among research teams with our intuitive platform.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">📊 Real-time Progress Tracking</h3>
+                        <p class="text-gray-600">Monitor document creation progress in real-time, allowing for better project management and timely interventions.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">🔒 Regulatory Compliance</h3>
+                        <p class="text-gray-600">Ensure all generated documents adhere to the latest regulatory standards and guidelines in the clinical trial industry.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="py-20">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl font-bold mb-8">Contact Us</h2>
                 <p class="text-gray-600 mb-4">Email: info@trialyx.com</p>
@@ -70,9 +110,37 @@
         </section>
     </main>
 
-    <footer class="bg-gray-800 text-white py-6">
-        <div class="container mx-auto px-6 text-center">
-            <p>&copy; 2024 Trialyx Health. All rights reserved.</p>
+    <footer class="bg-gray-800 text-white py-12">
+        <div class="container mx-auto px-6">
+            <div class="grid md:grid-cols-3 gap-8">
+                <div>
+                    <h4 class="text-lg font-semibold mb-4">Resources</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:underline">Documentation</a></li>
+                        <li><a href="#" class="hover:underline">API Reference</a></li>
+                        <li><a href="#" class="hover:underline">Tutorials</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-lg font-semibold mb-4">Company</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:underline">About Us</a></li>
+                        <li><a href="#" class="hover:underline">Careers</a></li>
+                        <li><a href="#" class="hover:underline">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-lg font-semibold mb-4">Legal</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:underline">Privacy Policy</a></li>
+                        <li><a href="#" class="hover:underline">Terms of Service</a></li>
+                        <li><a href="#" class="hover:underline">Cookie Policy</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="mt-8 pt-8 border-t border-gray-700 text-center">
+                <p>&copy; 2024 Trialyx Health. All rights reserved.</p>
+            </div>
         </div>
     </footer>
 </body>
