--- a/clinical-trial-management.html
+++ b/clinical-trial-management.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trialyx Health Document Generator</title>
+    <title>Trialyx Clinical Trial Management System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
 </head>
 <body class="font-sans bg-gray-100">
@@ -21,33 +21,31 @@
     </header>
 
     <main class="container mx-auto px-6 py-12">
-        <h1 class="text-4xl font-bold mb-8">Trialyx Health Document Generator</h1>
-        <p class="text-xl mb-8">Our advanced AI-powered platform revolutionizes clinical trial documentation, streamlining the creation process and enhancing collaboration among research teams.</p>
+        <h1 class="text-4xl font-bold mb-8">Trialyx Clinical Trial Management System <span class="text-2xl font-normal text-gray-500">(Coming Soon)</span></h1>
+        <p class="text-xl mb-8">Experience the future of clinical trial management with our comprehensive AI platform, optimizing every aspect of your trials from planning to execution.</p>
         
         <h2 class="text-2xl font-semibold mb-4">Key Features:</h2>
         <ul class="list-disc list-inside mb-8">
-            <li>Automated document generation using advanced AI models</li>
-            <li>AI-powered content refinement for accuracy and completeness</li>
-            <li>Flexible document customization to meet specific trial needs</li>
-            <li>Collaborative workflow support for seamless teamwork</li>
-            <li>Real-time progress tracking and reporting</li>
+            <li>AI-driven trial planning and scheduling</li>
+            <li>Intelligent participant recruitment and management</li>
+            <li>Advanced data collection and analysis tools</li>
+            <li>Automated regulatory compliance checks</li>
+            <li>Real-time risk assessment and mitigation</li>
         </ul>
 
         <h2 class="text-2xl font-semibold mb-4">Benefits:</h2>
         <ul class="list-disc list-inside mb-8">
-            <li>Significantly reduce document creation time</li>
-            <li>Improve document quality and consistency</li>
-            <li>Enhance compliance with regulatory requirements</li>
-            <li>Streamline collaboration among research teams</li>
-            <li>Accelerate the overall clinical trial process</li>
+            <li>Significantly reduce trial duration and costs</li>
+            <li>Improve patient recruitment and retention rates</li>
+            <li>Enhance data quality and integrity</li>
+            <li>Streamline regulatory compliance processes</li>
+            <li>Accelerate time-to-market for new treatments</li>
         </ul>
 
-        <a href="#" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-full hover:bg-blue-700 transition duration-300">Request a Demo</a>
-
+        <a href="#" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-full hover:bg-blue-700 transition duration-300">Join the Waitlist</a>
     </main>
 
-
-
+    
 <footer class="bg-gray-800 text-white py-12">
     <div class="container mx-auto px-6">
         <div class="grid md:grid-cols-3 gap-8">
