--- a/V1/index.html
+++ b/V1/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trialyx Health - Revolutionizing Clinical Trial Data Management</title>
-    <meta name="description" content="Trialyx Health is transforming clinical trial data management with AI-powered solutions. Streamline your clinical trials and accelerate medical breakthroughs.">
-    <meta name="keywords" content="clinical trials, data management, AI, healthcare, medical research">
+    <title>Trialyx Health - Revolutionizing Clinical Trial Documentation with AI</title>
+    <meta name="description" content="Trialyx Health is transforming clinical trial documentation with AI-powered solutions. Streamline your clinical trials and accelerate medical breakthroughs.">
+    <meta name="keywords" content="clinical trials, documentation, AI, healthcare, medical research">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
     <style>
         .gradient-bg {
@@ -17,12 +17,12 @@
     <header class="bg-white shadow-md">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="/api/placeholder/200/100" alt="Trialyx Logo" class="h-8 w-auto mr-3">
+                <img src="files/trialyx-health-logo-zip-file/svg/logo-color.svg" alt="Trialyx Logo" class="h-8 w-auto mr-3">
                 <span class="text-xl font-semibold text-gray-800">Trialyx Health</span>
             </div>
             <div class="hidden md:flex items-center space-x-4">
                 <a href="#about" class="text-gray-600 hover:text-gray-800">About</a>
-                <a href="#products" class="text-gray-600 hover:text-gray-800">Products</a>
+                <a href="#product" class="text-gray-600 hover:text-gray-800">Our Product</a>
                 <a href="#features" class="text-gray-600 hover:text-gray-800">Features</a>
                 <a href="#contact" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-full hover:bg-blue-700 transition duration-300">Contact Us</a>
             </div>
@@ -32,46 +32,42 @@
     <main>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
-                <h1 class="text-4xl font-bold mb-4">Revolutionizing Clinical Trial Data Management</h1>
-                <p class="text-xl mb-8">Accelerate medical breakthroughs with our AI-powered solutions</p>
+                <h1 class="text-4xl font-bold mb-4">Revolutionizing Clinical Trial Documentation with AI</h1>
+                <p class="text-xl mb-8">We provide advanced AI-powered Solutions to streamline the creation of clinical trial documents, enabling researchers to focus on what matters most: improving patient outcomes.</p>
                 <a href="#contact" class="bg-white text-blue-600 font-bold py-2 px-4 rounded-full hover:bg-gray-100 transition duration-300">Get Started</a>
             </div>
         </section>
 
-        <section id="about" class="py-20 bg-gray-100">
+        <section id="about" class="py-20">
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl font-bold text-center mb-8">About Trialyx</h2>
-                <p class="text-gray-600 text-center max-w-2xl mx-auto">Trialyx is a cutting-edge startup dedicated to transforming the landscape of clinical trial data management. We provide a centralized platform that streamlines the entire clinical trial process, from planning to documentation.</p>
+                <p class="text-gray-600 text-center max-w-2xl mx-auto">Trialyx is a cutting-edge startup dedicated to transforming the landscape of clinical trial documentation. Our mission is to accelerate medical breakthroughs by simplifying and automating clinical trial workflows, focusing exclusively on document generation and management.</p>
             </div>
         </section>
 
-        <section id="products" class="py-20">
+        <section id="products" class="py-20 bg-gray-100">
             <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold text-center mb-8">Our Products</h2>
+                <h2 class="text-3xl font-bold text-center mb-4">Solutions</h2>
+                <p class="text-gray-600 text-center max-w-2xl mx-auto mb-12">Clinicians, researchers, and regulators rely on TRIALYX HEALTH® technology and evidence to learn faster and power smarter care for every patient.</p>
                 <div class="grid md:grid-cols-2 gap-8">
-                    <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">Trialyx Health Document Generator</h3>
-                        <p class="text-gray-600 mb-4">An advanced, agent-based web application built with Streamlit, designed to revolutionize the creation of clinical trial documentation.</p>
+                    <div class="bg-white p-8 rounded-lg shadow-md">
+                        <h3 class="text-2xl font-semibold mb-4">Trialyx Health Document Generator</h3>
+                        <p class="text-gray-600 mb-6">Revolutionize your clinical trial documentation with our AI-powered platform, streamlining the creation process and enhancing collaboration among research teams.</p>
                         <a href="document-generator.html" class="text-blue-600 font-bold hover:underline">Learn More</a>
                     </div>
-                    <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">Clinical Trial Management System <span class="text-sm font-normal text-gray-500">(Coming Soon)</span></h3>
-                        <p class="text-gray-600 mb-4">A comprehensive AI platform for end-to-end clinical trial management, functioning like a Kayak.com for clinical trials. It optimizes, accelerates, and automates trial processes.</p>
-                        <ul class="list-disc list-inside text-gray-600 mb-4">
-                            <li>📅 Trial planning and scheduling</li>
-                            <li>👥 Participant recruitment and management</li>
-                            <li>📊 Data collection and analysis</li>
-                            <li>🔒 Regulatory compliance tools</li>
-                        </ul>
+                    <div class="bg-white p-8 rounded-lg shadow-md">
+                        <h3 class="text-2xl font-semibold mb-4">Clinical Trial Management System <span class="text-sm font-normal text-gray-500">(Coming Soon)</span></h3>
+                        <p class="text-gray-600 mb-6">Experience the future of clinical trial management with our comprehensive AI platform, optimizing every aspect of your trials from planning to execution.</p>
+                        <a href="clinical-trial-management.html" class="text-blue-600 font-bold hover:underline">Learn More</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="features" class="py-20 bg-gray-100">
+        <section id="key-features" class="py-20">
             <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold text-center mb-8">Key Features</h2>
-                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <h2 class="text-3xl font-bold text-center mb-12">Key Features</h2>
+                <div class="grid md:grid-cols-2 gap-8">
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-4">📝 Automated Document Generation</h3>
                         <p class="text-gray-600">Effortlessly generate a wide range of clinical trial documents using advanced AI models.</p>
@@ -88,19 +84,11 @@
                         <h3 class="text-xl font-semibold mb-4">👥 Collaborative Workflow Support</h3>
                         <p class="text-gray-600">Enable seamless collaboration among research teams with our intuitive platform.</p>
                     </div>
-                    <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">📊 Real-time Progress Tracking</h3>
-                        <p class="text-gray-600">Monitor document creation progress in real-time, allowing for better project management and timely interventions.</p>
-                    </div>
-                    <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">🔒 Regulatory Compliance</h3>
-                        <p class="text-gray-600">Ensure all generated documents adhere to the latest regulatory standards and guidelines in the clinical trial industry.</p>
-                    </div>
                 </div>
             </div>
         </section>
 
-        <section id="contact" class="py-20">
+        <section id="contact" class="py-20 bg-gray-100">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-3xl font-bold mb-8">Contact Us</h2>
                 <p class="text-gray-600 mb-4">Email: info@trialyx.com</p>
