--- a/index.html
+++ b/index.html
@@ -2,102 +2,153 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trialyx Health - Revolutionizing Clinical Trial Documentation with AI</title>
     <meta name="description" content="Trialyx Health is transforming clinical trial documentation with AI-powered solutions. Streamline your clinical trials and accelerate medical breakthroughs.">
     <meta name="keywords" content="clinical trials, documentation, AI, healthcare, medical research">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
-    <style>
-        .gradient-bg {
-            background: linear-gradient(90deg, #4F46E5, #818CF8);
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tailwind CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body class="font-sans">
-    <header class="bg-white shadow-md">
-        <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
+<body class="font-sans antialiased">
+    <!-- Navbar -->
+    <nav class="bg-white shadow-md fixed w-full z-50">
+        <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="files/trialyx-health-logo-zip-file/svg/logo-color.svg" alt="Trialyx Logo" class="h-8 w-auto mr-3">
-                <span class="text-xl font-semibold text-gray-800">Trialyx Health</span>
+                <a href="index.html" class="flex items-center">
+                    <img src="files/trialyx-health-logo-zip-file/svg/logo-color.svg" alt="Trialyx Logo" class="h-8 w-auto mr-3">
+                    <span class="text-xl font-semibold text-gray-800">Trialyx Health</span>
+                </a>
             </div>
-            <div class="hidden md:flex items-center space-x-4">
-                <a href="#about" class="text-gray-600 hover:text-gray-800">About</a>
-                <a href="#product" class="text-gray-600 hover:text-gray-800">Our Product</a>
-                <a href="#features" class="text-gray-600 hover:text-gray-800">Features</a>
-                <a href="#contact" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-full hover:bg-blue-700 transition duration-300">Contact Us</a>
+            <div class="hidden md:flex items-center space-x-6">
+                <a href="#home" class="text-gray-600 hover:text-blue-600">Home</a>
+                <a href="#about" class="text-gray-600 hover:text-blue-600">About</a>
+                <a href="#solutions" class="text-gray-600 hover:text-blue-600">Solutions</a>
+                <a href="#features" class="text-gray-600 hover:text-blue-600">Features</a>
+                <a href="#contact" class="text-gray-600 hover:text-blue-600">Contact</a>
             </div>
-        </nav>
-    </header>
+            <div class="md:hidden">
+                <button id="mobile-menu-button" class="text-gray-600 focus:outline-none">
+                    <svg class="h-6 w-6" fill="none" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M4 6h16M4 12h16M4 18h16" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="hidden md:hidden">
+            <a href="#home" class="block px-4 py-2 text-gray-600 hover:bg-gray-200">Home</a>
+            <a href="#about" class="block px-4 py-2 text-gray-600 hover:bg-gray-200">About</a>
+            <a href="#solutions" class="block px-4 py-2 text-gray-600 hover:bg-gray-200">Solutions</a>
+            <a href="#features" class="block px-4 py-2 text-gray-600 hover:bg-gray-200">Features</a>
+            <a href="#contact" class="block px-4 py-2 text-gray-600 hover:bg-gray-200">Contact</a>
+        </div>
+    </nav>
 
-    <main>
-        <section class="gradient-bg text-white py-20">
-            <div class="container mx-auto px-6 text-center">
-                <h1 class="text-4xl font-bold mb-4">Revolutionizing Clinical Trial Documentation with AI</h1>
-                <p class="text-xl mb-8">We provide advanced AI-powered Solutions to streamline the creation of clinical trial documents, enabling researchers to focus on what matters most: improving patient outcomes.</p>
-                <a href="#contact" class="bg-white text-blue-600 font-bold py-2 px-4 rounded-full hover:bg-gray-100 transition duration-300">Get Started</a>
-            </div>
-        </section>
+    <!-- Hero Section -->
+    <section id="home" class="bg-gradient-to-r from-blue-600 to-indigo-600 text-white flex items-center justify-center min-h-screen pt-16">
+        <div class="container mx-auto px-6 text-center">
+            <h1 class="text-5xl font-bold mb-4">Revolutionizing Clinical Trial Documentation with AI</h1>
+            <p class="text-xl mb-8">We provide advanced AI-powered solutions to streamline the creation of clinical trial documents, enabling researchers to focus on what matters most: improving patient outcomes.</p>
+            <a href="#contact" class="bg-white text-blue-600 font-bold py-3 px-6 rounded-full hover:bg-gray-100 transition duration-300">Get Started</a>
+        </div>
+    </section>
 
-        <section id="about" class="py-20">
-            <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold text-center mb-8">About Trialyx</h2>
-                <p class="text-gray-600 text-center max-w-2xl mx-auto">Trialyx is a cutting-edge startup dedicated to transforming the landscape of clinical trial documentation. Our mission is to accelerate medical breakthroughs by simplifying and automating clinical trial workflows, focusing exclusively on document generation and management.</p>
-            </div>
-        </section>
+    <!-- About Section -->
+    <section id="about" class="py-20 flex items-center justify-center min-h-screen">
+        <div class="container mx-auto px-6">
+            <h2 class="text-4xl font-bold text-center mb-8 text-blue-600">About Trialyx</h2>
+            <p class="text-gray-700 text-center max-w-3xl mx-auto text-lg">Trialyx is a cutting-edge startup dedicated to transforming the landscape of clinical trial documentation. Our mission is to accelerate medical breakthroughs by simplifying and automating clinical trial workflows, focusing exclusively on document generation and management.</p>
+        </div>
+    </section>
 
-        <section id="products" class="py-20 bg-gray-100">
-            <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold text-center mb-4">Solutions</h2>
-                <p class="text-gray-600 text-center max-w-2xl mx-auto mb-12">Clinicians, researchers, and regulators rely on TRIALYX HEALTH® technology and evidence to learn faster and power smarter care for every patient.</p>
-                <div class="grid md:grid-cols-2 gap-8">
-                    <div class="bg-white p-8 rounded-lg shadow-md">
-                        <h3 class="text-2xl font-semibold mb-4">Trialyx Health Document Generator</h3>
-                        <p class="text-gray-600 mb-6">Revolutionize your clinical trial documentation with our AI-powered platform, streamlining the creation process and enhancing collaboration among research teams.</p>
-                        <a href="document-generator.html" class="text-blue-600 font-bold hover:underline">Learn More</a>
-                    </div>
-                    <div class="bg-white p-8 rounded-lg shadow-md">
-                        <h3 class="text-2xl font-semibold mb-4">Clinical Trial Management System <span class="text-sm font-normal text-gray-500">(Coming Soon)</span></h3>
-                        <p class="text-gray-600 mb-6">Experience the future of clinical trial management with our comprehensive AI platform, optimizing every aspect of your trials from planning to execution.</p>
-                        <a href="clinical-trial-management.html" class="text-blue-600 font-bold hover:underline">Learn More</a>
-                    </div>
+    <!-- Solutions Section -->
+    <section id="solutions" class="bg-gray-100 py-20 flex items-center justify-center min-h-screen">
+        <div class="container mx-auto px-6">
+            <h2 class="text-4xl font-bold text-center mb-12 text-blue-600">Our Solutions</h2>
+            <div class="grid md:grid-cols-2 gap-8">
+                <!-- Solution 1 -->
+                <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <h3 class="text-2xl font-semibold mb-4 text-blue-600">Trialyx Health Document Generator</h3>
+                    <p class="text-gray-600 mb-6">Revolutionize your clinical trial documentation with our AI-powered platform, streamlining the creation process and enhancing collaboration among research teams.</p>
+                    <a href="document-generator.html" class="text-blue-600 font-bold hover:underline">Learn More &rarr;</a>
+                </div>
+                <!-- Solution 2 -->
+                <div class="bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <h3 class="text-2xl font-semibold mb-4 text-blue-600">Clinical Trial Management System <span class="text-sm font-normal text-gray-500">(Coming Soon)</span></h3>
+                    <p class="text-gray-600 mb-6">Experience the future of clinical trial management with our comprehensive AI platform, optimizing every aspect of your trials from planning to execution.</p>
+                    <a href="clinical-trial-management.html" class="text-blue-600 font-bold hover:underline">Learn More &rarr;</a>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="key-features" class="py-20">
-            <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold text-center mb-12">Key Features</h2>
-                <div class="grid md:grid-cols-2 gap-8">
-                    <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">📝 Automated Document Generation</h3>
-                        <p class="text-gray-600">Effortlessly generate a wide range of clinical trial documents using advanced AI models.</p>
+    <!-- Key Features Section -->
+    <section id="features" class="py-20 flex items-center justify-center min-h-screen">
+        <div class="container mx-auto px-6">
+            <h2 class="text-4xl font-bold text-center mb-12 text-blue-600">Key Features</h2>
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <!-- Feature 1 -->
+                <div class="text-center bg-gray-100 p-6 rounded-lg shadow-md">
+                    <div class="mb-4 text-blue-600">
+                        <!-- Icon -->
+                        <svg class="w-12 h-12 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M4 4h16v2H4V4zm0 6h16v2H4v-2zm0 6h16v2H4v-2z"/>
+                        </svg>
                     </div>
-                    <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">🤖 AI-powered Content Refinement</h3>
-                        <p class="text-gray-600">Continuously refine documents through intelligent agents that check for missing information, timeline inconsistencies, and redundancies.</p>
+                    <h3 class="text-xl font-semibold mb-2">Automated Document Generation</h3>
+                    <p class="text-gray-600">Effortlessly generate a wide range of clinical trial documents using advanced AI models.</p>
+                </div>
+                <!-- Feature 2 -->
+                <div class="text-center bg-gray-100 p-6 rounded-lg shadow-md">
+                    <div class="mb-4 text-blue-600">
+                        <!-- Icon -->
+                        <svg class="w-12 h-12 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M12 0L8.59 3.41 12 6.83l3.41-3.42L12 0zM12 7.17l-3.41 3.42L12 14l3.41-3.41L12 7.17zm0 7.83l-3.41 3.42L12 22l3.41-3.42L12 15z"/>
+                        </svg>
                     </div>
-                    <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">🔄 Flexible Document Customization</h3>
-                        <p class="text-gray-600">Customize and design any type of clinical trial document according to specific needs.</p>
+                    <h3 class="text-xl font-semibold mb-2">AI-powered Content Refinement</h3>
+                    <p class="text-gray-600">Continuously refine documents through intelligent agents that check for missing information and inconsistencies.</p>
+                </div>
+                <!-- Feature 3 -->
+                <div class="text-center bg-gray-100 p-6 rounded-lg shadow-md">
+                    <div class="mb-4 text-blue-600">
+                        <!-- Icon -->
+                        <svg class="w-12 h-12 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M19 3H5c-1.1 0-2 .9-2 2v14l7-3 7 3V5c0-1.1-.9-2-2-2z"/>
+                        </svg>
                     </div>
-                    <div class="bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">👥 Collaborative Workflow Support</h3>
-                        <p class="text-gray-600">Enable seamless collaboration among research teams with our intuitive platform.</p>
+                    <h3 class="text-xl font-semibold mb-2">Flexible Customization</h3>
+                    <p class="text-gray-600">Customize and design any type of clinical trial document according to specific needs.</p>
+                </div>
+                <!-- Feature 4 -->
+                <div class="text-center bg-gray-100 p-6 rounded-lg shadow-md">
+                    <div class="mb-4 text-blue-600">
+                        <!-- Icon -->
+                        <svg class="w-12 h-12 mx-auto" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M16 11V5l-4-4-4 4v6H2v9h20v-9h-6z"/>
+                        </svg>
                     </div>
+                    <h3 class="text-xl font-semibold mb-2">Collaborative Workflow</h3>
+                    <p class="text-gray-600">Enable seamless collaboration among research teams with our intuitive platform.</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="contact" class="py-20 bg-gray-100">
-            <div class="container mx-auto px-6 text-center">
-                <h2 class="text-3xl font-bold mb-8">Contact Us</h2>
-                <p class="text-gray-600 mb-4">Email: info@trialyx.com</p>
-                <p class="text-gray-600 mb-4">Website: www.trialyx.com</p>
-                <a href="mailto:info@trialyx.com" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-full hover:bg-blue-700 transition duration-300">Get in Touch</a>
-            </div>
-        </section>
-    </main>
+    <!-- Contact Section -->
+    <section id="contact" class="bg-gray-100 py-20 flex items-center justify-center min-h-screen">
+        <div class="container mx-auto px-6 text-center">
+            <h2 class="text-4xl font-bold mb-8 text-blue-600">Contact Us</h2>
+            <p class="text-gray-700 mb-4 text-xl">Email: <a href="mailto:info@trialyx.com" class="text-blue-600 hover:underline">info@trialyx.com</a></p>
+            <p class="text-gray-700 mb-8 text-xl">Website: <a href="https://www.trialyx.com" class="text-blue-600 hover:underline">www.trialyx.com</a></p>
+            <a href="mailto:info@trialyx.com" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-full hover:bg-blue-700 transition duration-300 text-xl">Get in Touch</a>
+        </div>
+    </section>
 
+    <!-- Footer -->
     <footer class="bg-gray-800 text-white py-12">
         <div class="container mx-auto px-6">
             <div class="grid md:grid-cols-3 gap-8">
@@ -112,9 +163,9 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Company</h4>
                     <ul class="space-y-2">
-                        <li><a href="#" class="hover:underline">About Us</a></li>
+                        <li><a href="about.html" class="hover:underline">About Us</a></li>
                         <li><a href="#" class="hover:underline">Careers</a></li>
-                        <li><a href="#" class="hover:underline">Contact Us</a></li>
+                        <li><a href="contact.html" class="hover:underline">Contact Us</a></li>
                     </ul>
                 </div>
                 <div>
@@ -131,5 +182,16 @@
             </div>
         </div>
     </footer>
+
+    <!-- Scripts -->
+    <script>
+        // Mobile menu toggle
+        const mobileMenuButton = document.getElementById('mobile-menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        mobileMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
 </body>
 </html>
