add initial files

--- a/clinical-trial-management.html
+++ b/clinical-trial-management.html
@@ -17,7 +17,7 @@
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="index.html" class="flex items-center">
-                    <img src="files/trialyx-health-logo-zip-file/svg/logo-color.svg" alt="Trialyx Logo" class="h-8 w-auto mr-3">
+                    <img src="files/trialyx-health-logo-zip-file/png/logo-no-background-no-text.png" alt="Trialyx Logo" class="h-8 w-auto mr-3">
                     <span class="text-xl font-semibold text-gray-800">Trialyx Health</span>
                 </a>
             </div>
